# rust-pi-robot

./: .gitignore  Cargo.toml  README.md
config/: robot.yaml  robot.yaml.example
src/: lib.rs  robot.rs
tests/: robot.rs
