[package]
name = "assigato-remote"
version = "0.1.0"
authors = ["Matt Harrington <querry43@gmail.com>"]

[dependencies]
config = "0.8"
i2c-pca9685 = { git = "https://github.com/querry43/i2c-pca9685" }
i2cdev = "0.3"
rppal = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ws = "0.7"

[replace]
"skeptic:0.13.2" = { git = 'https://github.com/budziq/rust-skeptic' }
